--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Beautiful Dynamic To-Do List</title>
-  <link rel="stylesheet" href="task.css" />
+  <meta charset="UTF-8">
+  <title>Effective To-Do List</title>
+  <link rel="stylesheet" href="task.css">
 </head>
 <body>
-  <h2>Dynamic To-Do List</h2>
-  <input type="text" id="taskInput" placeholder="Enter a task" />
-  <button id="addBtn">Add Task</button>
-  <ul id="taskList"></ul>
+  <div class="container">
+    <h1>My To-Do List</h1>
+    <div class="input-section">
+      <input type="text" id="task-input" placeholder="Enter new task">
+      <button id="add-task-btn">Add Task</button>
+    </div>
+    <ul id="task-list"></ul>
+  </div>
   <script src="task.js"></script>
- 
-
-
 </body>
 </html>
